success fixes companies

--- a/index.html
+++ b/index.html
@@ -295,32 +295,33 @@
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="two">
-                        <div class="max_telecom">
-                            <img src="img/MAX_telecom_w108px_X_h95.jpg" alt="max telecom">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
-                            </div> 
+                        <div class="companies">
+                            <div class="max_telecom">
+                                <img src="img/MAX_telecom_w108px_X_h95.jpg" alt="max telecom">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div> 
 
-                        </div>
-                        <div class="knibctap">
-                            <img src="img/Kyivstarw_w108px_X_h95.jpg" alt="knibctap">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
+                            </div>
+                            <div class="knibctap">
+                                <img src="img/Kyivstarw_w108px_X_h95.jpg" alt="knibctap">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
+                            </div>
+                            <div class="videocon">
+                                <img src="img/VIDEOCON_w108px_X_h95px.jpg" alt="videocon">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="videocon">
-                            <img src="img/VIDEOCON_w108px_X_h95px.jpg" alt="videocon">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
-                            </div>
-                        </div>
-
                         <div class="graeme_miller">
 
     						<blockquote>
@@ -360,25 +361,27 @@
                             </div>
 
                         <!-- <span class="three_mob"></span> -->
-                        <div class="three_mob">
-                            <img src="img/3mob_w108px_X_h95px.jpg" alt="three mob">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
+                        <div class="companies">
+                            <div class="three_mob">
+                                <img src="img/3mob_w108px_X_h95px.jpg" alt="three mob">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
                             </div>
-                        </div>
-                        <!-- <span class="play"></span> -->
-                        <div class="play">
-                            <img src="img/play_w108px_X_h95px.jpg" alt="play">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
+                            <!-- <span class="play"></span> -->
+                            <div class="play">
+                                <img src="img/play_w108px_X_h95px.jpg" alt="play">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
                             </div>
-                        </div>
+                       </div> 
     				</li>
-
+                        
     			</ul>
     			<a href='' class="more_btn more_btn_see_more">All 256 Success Stories</a>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
