--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="two">
-                        <div class="companies">
+                        <div class="companies_middle">
                             <div class="max_telecom">
                                 <img src="img/MAX_telecom_w108px_X_h95.jpg" alt="max telecom">
                                 <div class="bg">
