--- a/index.html
+++ b/index.html
@@ -324,20 +324,26 @@
                         </div>
                         <div class="graeme_miller">
 
-    						<blockquote>
-	                            <p>
-	                            The expectations of Jersey Telecom have been completely met
-								by Comvers...                           
-								</p>
+                            <img src="img/mts_w108px_X_h95px.jpg" alt="videocon">
+                            <blockquote>
+                                <p>
+                                The expectations of Jersey Telecom have been completely met
+                                by Comvers...                           
+                                </p>
                             </blockquote>
                             <hr>
 
                             <p class="person_info">
-    						<p itemprop="name" class="name_info">GRAEME MILLER</p>
+                            <p itemprop="name" class="name_info">GRAEME MILLER</p>
                             <span itemprop="jobTitle" class="job_info"> CEO</span>
                             <span itemprop="worksFor" class="jt"></span>
                             </p>
+                            <div class="bg">
+                                 <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
 
+                                 </p>
+                            </div>
 
                         </div>
 
