--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </div>
                         <div class="graeme_miller">
 
-                            <img src="img/mts_w108px_X_h95px.jpg" alt="videocon">
+                            <img src="img/JT-GM-face.jpg" alt="videocon">
                             <blockquote>
                                 <p>
                                 The expectations of Jersey Telecom have been completely met
