--- a/index.html
+++ b/index.html
@@ -322,31 +322,32 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="graeme_miller">
+                        <div class="person_box">
+                            <div class="graeme_miller">
 
-                            <img src="img/JT-GM-face.jpg" alt="videocon">
-                            <blockquote>
-                                <p>
-                                The expectations of Jersey Telecom have been completely met
-                                by Comvers...                           
+                                <img src="img/JT-GM-face.jpg" alt="videocon">
+                                <blockquote>
+                                    <p>
+                                    The expectations of Jersey Telecom have been completely met
+                                    by Comvers...                           
+                                    </p>
+                                </blockquote>
+                                <hr>
+
+                                <p class="person_info">
+                                <p itemprop="name" class="name_info">GRAEME MILLER</p>
+                                <span itemprop="jobTitle" class="job_info"> CEO</span>
+                                <span itemprop="worksFor" class="jt"></span>
                                 </p>
-                            </blockquote>
-                            <hr>
+                                <div class="bg">
+                                     <p class="bg_in">
+                                         <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
 
-                            <p class="person_info">
-                            <p itemprop="name" class="name_info">GRAEME MILLER</p>
-                            <span itemprop="jobTitle" class="job_info"> CEO</span>
-                            <span itemprop="worksFor" class="jt"></span>
-                            </p>
-                            <div class="bg">
-                                 <p class="bg_in">
-                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
 
-                                 </p>
                             </div>
-
                         </div>
-
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="three">
