--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </p>
                                 <div class="bg">
                                      <p class="bg_in">
-                                         <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                         <img src="img/person_box_back.png" alt="bg">
 
                                      </p>
                                 </div>
