--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <li><a href="#">Personalized Social Media Interactions and more</a></li>
                         </ul>
                     <!-- </section> -->
-                    <a href="" class="more_btn">LEARN MORE</a> 
+                    <a href="" class="more_btn learn_more_btn">LEARN MORE</a> 
     			   <section class="carousel_cls_internal">
     					
                         <ul class="etc_cls">
