--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
                     <!-- <section class="carousel_cls_con_up"> -->
                         <ul class="carousel_cls_con_up">
-                            <li><a href="#" text-decoration="none">Personalized Plans and Offerings, Smart Customer Interactions</a></li>
+                            <li><a href="#">Personalized Plans and Offerings, Smart Customer Interactions</a></li>
                             <li><a href="#">Comprehensive Self-Service and Account Control</a></li>
                             <li><a href="#">Personalized Social Media Interactions and more</a></li>
                         </ul>
