--- a/index.html
+++ b/index.html
@@ -249,22 +249,31 @@
     			<ul>
 
     				<li itemscope itemtype="http://schema.org/Person" class="one">
-                        <div class="jonathan_pierce">
+                        <div class="person_box">
+                            <div class="jonathan_pierce">
 
-	    					<blockquote>
-		                        <p>
-		                        BTC, a full-service provider in the Bahamas, depends on	Comverse solut...
-		                        </p>
-	                        </blockquote>
-                        <hr>
-    					
-                        <p class="person_info">
-	                        <p itemprop="name" class="name_info">JONATHAN PIERCE</p>
-	                        <span itemprop="jobTitle" class="job_info">Group Mobile Architect </span> 
-	                        <span itemprop="worksFor" class="cable_wireless"></span>
-                        </p>
+    	    					<blockquote>
+    		                        <p>
+    		                        BTC, a full-service provider in the Bahamas, depends on	Comverse solut...
+    		                        </p>
+    	                        </blockquote>
+                            <hr>
+        					
+                            <p class="person_info">
+    	                        <p itemprop="name" class="name_info">JONATHAN PIERCE</p>
+    	                        <span itemprop="jobTitle" class="job_info">Group Mobile Architect </span> 
+    	                        <span itemprop="worksFor" class="cable_wireless"></span>
+                            </p>
+                                <div class="bg">
+                                     <p class="bg_in">
+                                         <img src="img/person_box_back.png" alt="bg">
 
+                                     </p>
+                                </div>
+                            </div>
                         </div>
+
+
                         <div class="companies">
                             <div class="mtc">
                                 <img src="img/mts_w108px_X_h95px.jpg" alt="mtc">
