--- a/index.html
+++ b/index.html
@@ -358,22 +358,28 @@
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="three">
-                        <div class="adale_kehassan">
+                        <div class="person_box">
+                            <div class="adale_kehassan">
 
-    						<blockquote>
-                            <p>
-                            "Comverse has demonstrated that they are partners, not	  just suppliers"
-                            </p>
-                            </blockquote>
-                            <hr>
+        						<blockquote>
+                                <p>
+                                "Comverse has demonstrated that they are partners, not	  just suppliers"
+                                </p>
+                                </blockquote>
+                                <hr>
 
-                            <p class="person_info">
-    						<p itemprop="name" class="name_info">ADALE KEHASSAN</p>
-                            <span itemprop="jobTitle" class="job_info">CIO</span>
-                            <span itemprop="worksFor" class="multi_links"></span> 
-                            </p>
+                                <p class="person_info">
+        						<p itemprop="name" class="name_info">ADALE KEHASSAN</p>
+                                <span itemprop="jobTitle" class="job_info">CIO</span>
+                                <span itemprop="worksFor" class="multi_links"></span> 
+                                </p>
+                                <div class="bg">
+                                     <p class="bg_in">
+                                         <img src="img/person_box_back.png" alt="bg">
+                                     </p>
+                                </div>
                             </div>
-
+                        </div>
                         <!-- <span class="three_mob"></span> -->
                         <div class="companies">
                             <div class="three_mob">
