--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             </p>
                                 <div class="bg">
                                      <p class="bg_in">
-                                         <img src="img/person_box_back.png" alt="bg">
+                                         <img src="img/person_box_back_left.png" alt="bg">
 
                                      </p>
                                 </div>
@@ -356,7 +356,7 @@
                             </div>
                         </div>
     				</li>
-                     
+
     				<li itemscope itemtype="http://schema.org/Person" class="three">
                         <div class="person_box">
                             <div class="adale_kehassan">
