--- a/index.html
+++ b/index.html
@@ -403,7 +403,9 @@
     				</li>
                         
     			</ul>
-    			<a href='' class="more_btn more_btn_see_more">All 256 Success Stories</a>
+                <div>
+    			     <a href='' class="more_btn more_btn_see_more">All 79 Success Stories</a>
+                </div>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
 			</section>
 		</div>
