--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                 </p>
                                 <div class="bg">
                                      <p class="bg_in">
-                                         <img src="img/person_box_back.png" alt="bg">
+                                         <img src="img/person_box_back_right.png" alt="bg">
                                      </p>
                                 </div>
                             </div>
