--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
     				</li>
                         
     			</ul>
-                <div>
-    			     <a href='' class="more_btn more_btn_see_more">All 79 Success Stories</a>
+                <div class="more_btn more_btn_see_more">
+    			     <a href='#' >All 79 Success Stories</a>
                 </div>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
 			</section>
