--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
 <!-- -------------------------------- Footer ---------------------------
 <!-- -------------------------------- Footer --------------------------- -->
-<!--         <footer itemscope itemtype="http://schema.org/Event">
+        <footer itemscope itemtype="http://schema.org/Event">
             <div class="site_map_cls">
                 <ul>
                     <li class="site_map_internal">
@@ -482,7 +482,7 @@
                 </ul>
                 <div class="copyright"> Copyright &copy; 2012 Comverse, Inc. | Privacy Policy </div> 
             </div>
-        </footer> -->
+        </footer>
 
         <script></script>
 
