--- a/index.html
+++ b/index.html
@@ -24,7 +24,32 @@
                 <a href="#" class="logo">
                     <img src="img/comverse-logo.png" alt="Comverse logo image"> 
                 </a>
+                <div class="mobile">
+                    
+                    <label for="mobile_nav_cls" class="mobile_nav_btn nav_moblie"></label>
+                    <input type="checkbox" class="mobile_search_check" id="mobile_search_form">
+                    <form>
+                        <input type="text" value="Search">
+                    </form>
+                    <input type="checkbox" class="mobile_nav_check" id="mobile_nav_cls">
 
+                    <ul>
+                        <li>
+                            <a href="">YOUR NEEDS</a>
+                        </li>
+                        <li>
+                            <a href="">OUR PORTFOLIO</a>
+                        </li>
+                        <li>
+                            <a href="">NEWS &amp; MEDIA</a>
+                        </li>
+                        <li>
+                            <a href="">ABOUT COMVERSE</a>
+                        </li>
+                    </ul>
+                    <label for="mobile_search_form" class="search_btn_mobile search_moblie"></label>
+
+                </div>
 
                 <nav>
                     <ul class="nav_cls">
@@ -413,45 +438,66 @@
 
 <!-- -------------------------------- Footer ---------------------------
 <!-- -------------------------------- Footer --------------------------- -->
+
+            <div class="mobile_site_map_cls">
+                    <ul>
+                        <li>
+                            <a href="">CONTACT US</a>
+                        </li>
+                        <li>
+                            <a href="">SUBSCRIBE TO COMVERSE NEWS</a>
+                        </li>
+                        <li>
+                            <a href="">VISIT US ON:</a>
+                        </li>
+                        <li>
+                            <a href="">CHANGE LANGUAGE</a>
+                        </li>
+                    </ul>
+                    <div class="mobile_copyright">Copyright 2012 Comverse, Inc. | Privacy Policy| Sitemap</div>
+
+            </div>
+
+
         <footer itemscope itemtype="http://schema.org/Event">
             <div class="site_map_cls">
                 <ul>
                     <li class="site_map_internal">
                         <h5>KEY SOLUTIONS</h5>
                         <ul>
-                            <li>Monetizing Data</li>
-                            <li>Over the Top (OTT)</li>
-                            <li>Machine to Machine (M2M)</li>
-                            <li>Cloud Computing</li>
-                            <li>Managed Services</li>
-                            <li>Customer Experience Management</li>
-                            <li>Rich Communication Suite (RCS)</li>
-                            <li>Social Media</li>
-                            <li>4G/LTE</li>
+                            <li><a href="">Monetizing Data</a></li>
+                            <li><a href="">Over the Top (OTT)</a></li>
+                            <li><a href="">Machine to Machine (M2M)</a></li>
+                            <li><a href="">Cloud Computing</a></li>
+                            <li><a href="">Managed Services</a></li>
+                            <li><a href="">Customer Experience Management</a></li>
+                            <li><a href="">Rich Communication Suite (RCS)</a></li>
+                            <li><a href="">Social Media</a></li>
+                            <li><a href="">4G/LTE</a></li>
                         </ul>
                     </li>
 
                     <li class="site_map_internal">
                         <h5>PRODUCTS &amp; SERVICES</h5>
                         <ul>
-                            <li>Billing</li>
-                            <li>VAS</li>
-                            <li>Mobile Internet </li>
-                            <li>Global Services</li>
-                            <li>Training Services</li>
+                            <li><a href="">Billing</a></li>
+                            <li><a href="">VAS</a></li>
+                            <li><a href="">Mobile Internet</a></li>
+                            <li><a href="">Global Services</a></li>
+                            <li><a href="">Training Services</a></li>
                         </ul>
                     </li>
 
                     <li class="site_map_internal">
                         <h5>COMPANY</h5>
                         <ul>
-                            <li>Executive Profiles</li>
-                            <li>Clients</li>
-                            <li>Investors</li>
-                            <li>Partners</li>
-                            <li>Corporate Responsibility</li>
-                            <li>Industry Involvement</li>
-                            <li>Careers</li>
+                            <li><a href="">Executive Profiles</a></li>
+                            <li><a href="">Clients</a></li>
+                            <li><a href="">Investors</a></li>
+                            <li><a href="">Partners</a></li>
+                            <li><a href="">Corporate Responsibility</a></li>
+                            <li><a href="">Industry Involvement</a></li>
+                            <li><a href="">Careers</a></li>
                         </ul>
                     </li>
 
