--- a/index.html
+++ b/index.html
@@ -36,15 +36,68 @@
                     <ul>
                         <li>
                             <a href="">YOUR NEEDS</a>
+                                <ul class="nav_cls_internal nav_cls">
+                                    <li><a href="#">Smart Monetization</a></li>
+                                    <li><a href="#">Digital Customer Experience</a></li>
+                                    <li><a href="#">Personalized Choice &amp; Control</a></li>
+                                    <li><a href="#">Optimization and Efficiency</a></li>
+                                    <li><a href="#">Bussiness Tranformation</a></li>
+                                    <li><a href="#">Bussiness Enablement &amp; Growth</a></li>
+                                    <li><a href="#">Bussiness Stimulating Analytics</a></li>
+                                    <li><a href="#">Customer Evolution</a></li>
+                                </ul> 
                         </li>
                         <li>
                             <a href="">OUR PORTFOLIO</a>
+                                <ul class="nav_cls_internal nav_cls">
+                                    <li><a href="#">BSS - Bussiness Support Systems</a></li>
+                                    <li><a href="#">Converged BSS</a></li>
+                                    <li><a href="#">Active Customer Management</a></li>
+                                    <li><a href="#">Online &amp; Converged Charging</a></li>
+                                    <li><a href="#">Actionable Intelligence</a></li>
+                                    <li><a href="#">Social Media Gateway</a></li>
+                                    <li><a href="#">Mediation &amp; Settlements</a></li>
+                                    <li><a href="#">Prepaid Billing</a></li>
+                                    <li><a href="#">Comverse Kenan</a></li>
+                                    <li><a href="#">Policy</a></li>
+                                    <li><a href="#">Policy Management</a></li>
+                                    <li><a href="#">Policy Enforcement</a></li>
+                                    <li><a href="#">Digital Services</a></li>
+                                    <li><a href="#">Evolved Communication Suite</a></li>
+                                    <li><a href="#">Value Added Services</a></li>
+                                    <li><a href="#">Enterprise IP Communications</a></li>
+                                    <li><a href="#">Cloud Offering</a></li>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Managed Services</a></li>
+                                    <li><a href="#">Learning &amp; Certification Services</a></li>
+                                </ul>
                         </li>
                         <li>
                             <a href="">NEWS &amp; MEDIA</a>
+                                <ul class="nav_cls_internal nav_cls">
+                                    <li><a href="#">Press Releases</a></li>
+                                    <li><a href="#">Events</a></li>
+                                    <li><a href="#">In the News</a></li>
+                                    <li><a href="#">Success Stories</a></li>
+                                    <li><a href="#">Awards</a></li>
+                                    <li><a href="#">Multimedia &amp; Webinars</a></li>
+                                    <li><a href="#">Newsletter</a></li>
+                                    <li><a href="#">Articales and Papers</a></li>
+                                </ul>
                         </li>
                         <li>
                             <a href="">ABOUT COMVERSE</a>
+                                <ul class="nav_cls_internal nav_cls">
+                                    <li><a href="#">Overview</a></li>
+                                    <li><a href="#">Management</a></li>
+                                    <li><a href="#">Investors</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Careers</a></li>
+                                    <li><a href="#">Partners</a></li>
+                                    <li><a href="#">Customers</a></li>
+                                    <li><a href="#">Value &amp; Corporate Responsibility</a></li>
+                                    <li><a href="#">Industry Involvement</a></li>
+                                </ul>
                         </li>
                     </ul>
                     <label for="mobile_search_form" class="search_btn_mobile search_moblie"></label>
@@ -431,7 +484,6 @@
                 <div class="more_btn more_btn_see_more">
     			     <a href='#' >All 79 Success Stories</a>
                 </div>
-                <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
 			</section>
 		</div>
 
@@ -462,7 +514,7 @@
         <footer itemscope itemtype="http://schema.org/Event">
             <div class="site_map_cls">
                 <ul>
-                    <li class="site_map_internal">
+                    <li class="site_map_cls site_map_internal">
                         <h5>KEY SOLUTIONS</h5>
                         <ul>
                             <li><a href="">Monetizing Data</a></li>
@@ -477,7 +529,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_internal">
+                    <li class="site_map_cls site_map_internal">
                         <h5>PRODUCTS &amp; SERVICES</h5>
                         <ul>
                             <li><a href="">Billing</a></li>
@@ -488,7 +540,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_internal">
+                    <li class="site_map_cls site_map_internal">
                         <h5>COMPANY</h5>
                         <ul>
                             <li><a href="">Executive Profiles</a></li>
@@ -501,7 +553,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_internal">
+                    <li class="site_map_cls site_map_internal">
                         <section class="site_map_internal_last">
                            <div class="site_map_internal_last_in">
                             <h5>LATEST PRESS RELEASE</h5>                         
