--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <ul>
                         <li>
                             <a href="">YOUR NEEDS</a>
-                                <ul class="nav_cls_internal nav_cls">
+                                <ul class="nav_cls_internal">
                                     <li><a href="#">Smart Monetization</a></li>
                                     <li><a href="#">Digital Customer Experience</a></li>
                                     <li><a href="#">Personalized Choice &amp; Control</a></li>
@@ -49,7 +49,7 @@
                         </li>
                         <li>
                             <a href="">OUR PORTFOLIO</a>
-                                <ul class="nav_cls_internal nav_cls">
+                                <ul class="nav_cls_internal">
                                     <li><a href="#">BSS - Bussiness Support Systems</a></li>
                                     <li><a href="#">Converged BSS</a></li>
                                     <li><a href="#">Active Customer Management</a></li>
@@ -74,7 +74,7 @@
                         </li>
                         <li>
                             <a href="">NEWS &amp; MEDIA</a>
-                                <ul class="nav_cls_internal nav_cls">
+                                <ul class="nav_cls_internal">
                                     <li><a href="#">Press Releases</a></li>
                                     <li><a href="#">Events</a></li>
                                     <li><a href="#">In the News</a></li>
@@ -87,7 +87,7 @@
                         </li>
                         <li>
                             <a href="">ABOUT COMVERSE</a>
-                                <ul class="nav_cls_internal nav_cls">
+                                <ul class="nav_cls_internal">
                                     <li><a href="#">Overview</a></li>
                                     <li><a href="#">Management</a></li>
                                     <li><a href="#">Investors</a></li>
