--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <footer itemscope itemtype="http://schema.org/Event">
             <div class="site_map_cls">
                 <ul>
-                    <li class="site_map_cls site_map_internal">
+                    <li class="site_map_internal">
                         <h5>KEY SOLUTIONS</h5>
                         <ul>
                             <li><a href="">Monetizing Data</a></li>
@@ -529,7 +529,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_cls site_map_internal">
+                    <li class="site_map_internal">
                         <h5>PRODUCTS &amp; SERVICES</h5>
                         <ul>
                             <li><a href="">Billing</a></li>
@@ -540,7 +540,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_cls site_map_internal">
+                    <li class="site_map_internal">
                         <h5>COMPANY</h5>
                         <ul>
                             <li><a href="">Executive Profiles</a></li>
@@ -553,7 +553,7 @@
                         </ul>
                     </li>
 
-                    <li class="site_map_cls site_map_internal">
+                    <li class="site_map_internal">
                         <section class="site_map_internal_last">
                            <div class="site_map_internal_last_in">
                             <h5>LATEST PRESS RELEASE</h5>                         
