--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
     								<a href="#">
                                     <h2>Smart Evolution One Goal, Many Paths</h2>
                                     <img src="img/link-icon-image.png" alt="SeeHow">
-                                    See How</a>
+                                    <h3>See How</h3>
+                                    </a>
     							</li>
 
     						</ul>
