--- a/index.html
+++ b/index.html
@@ -241,11 +241,14 @@
                                     Read more</a>
     							</li>
     							<li class="boxes_cls green_box">
-    								<a href="#">
+    								
                                     <h2>Smart Evolution One Goal, Many Paths</h2>
-                                    <img src="img/link-icon-image.png" alt="SeeHow">
-                                    <h3>See How</h3>
-                                    </a>
+                                    <div class="more_text">
+                                    <a href="#">
+                                        <img src="img/link-icon-image.png" alt="SeeHow">
+                                    See How</a>
+                                    </div>
+                                                     
     							</li>
 
     						</ul>
