--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@
                                     Read more</a>
     							</li>
     							<li class="boxes_cls green_box">
-    								
+    								<a href="#">
                                     <h2>Smart Evolution One Goal, Many Paths</h2>
-                                    <a href="#">
+                                    <b> href="#">
                                         <img src="img/link-icon-image.png" alt="SeeHow">
-                                    See How</a>                                                     
+                                    See How
+                                    </b>
+                                    </a>                                                     
     							</li>
 
     						</ul>
