--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     							<li class="boxes_cls green_box">
     								<a href="#">
                                     <h2>Smart Evolution One Goal, Many Paths</h2>
-                                    <b> href="#">
+                                    <b href="#">
                                         <img src="img/link-icon-image.png" alt="SeeHow">
                                     See How
                                     </b>
