--- a/index.html
+++ b/index.html
@@ -230,23 +230,30 @@
     						<ul>
 								<li class="boxes_cls orange_box">
     								<a href="#">
-                                    <h2>Meet Us at Managed Services World Congress 2014</h2>
-                                    <img src="img/link-icon-image.png" alt="MoreInfo">
-                                    Click for More Info</a>
+                                        <h2>Meet Us at Managed Services World Congress 2014</h2>
+                                        <b href="#">
+                                        <img src="img/link-icon-image.png" alt="MoreInfo">
+                                        Click for More Info
+                                        </b>
+                                    </a>
     							</li>
     							<li class="boxes_cls pink_box">	
     								<a href="#">
-                                    <h2>Digital Lifestyle by Comverse</h2>
-                                    <img src="img/link-icon-image.png" alt="ReadMore">
-                                    Read more</a>
+                                        <h2>Digital Lifestyle by Comverse</h2>
+                                        <b href="#">
+                                        <img src="img/link-icon-image.png" alt="ReadMore">
+                                        Read more
+                                        </b>
+                                    </a>
+
     							</li>
     							<li class="boxes_cls green_box">
     								<a href="#">
-                                    <h2>Smart Evolution One Goal, Many Paths</h2>
-                                    <b href="#">
-                                        <img src="img/link-icon-image.png" alt="SeeHow">
-                                    See How
-                                    </b>
+                                        <h2>Smart Evolution One Goal, Many Paths</h2>
+                                        <b href="#">
+                                            <img src="img/link-icon-image.png" alt="SeeHow">
+                                        See How
+                                        </b>
                                     </a>                                                     
     							</li>
 
